fin seconde section + retouche bordure et fonts responsive

--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ h4,
 h5,
 h6,
 p,
-a {
+a,
+form {
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -42,8 +43,8 @@ h1 {
 
 .presentation {
   background-color: #f1f1f1;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 60px;
+  padding-right: 60px;
 }
 
 .presentation img {
@@ -104,16 +105,18 @@ h1 {
   grid-template-columns: 1fr 1fr;
 }
 
+/*--------INFO---------*/
+
 .infos {
   background-color: #e6e6e6;
   text-align: center;
-  padding: 20px;
+  padding:3.5em;
 }
 
 .infos h2 {
   padding-top: 20px;
   padding-bottom: 20px;
-  font-size: 125%;
+  font-size: 1.35em;
   font-weight: 200;
   text-align: center;
 }
@@ -122,19 +125,128 @@ h1 {
   color: rgb(75, 75, 75);
   line-height: 170%;
   text-align: justify;
-  font-size: 90%;
+  font-size: 100%;
   margin-bottom: 15px;
 }
 
 .infos blockquote {
-    text-align: justify;
-    font-style: italic;
-    padding: 20px 40px;
-    border-left: 4px solid black;
+  text-align: justify;
+  font-style: italic;
+  padding: 20px 40px;
+  font-size: 90%;
+  border-left: 4px solid black;
 }
+
+.infos blockquote a {
+  color: #be6c29;
+  line-height: 170%;
+  text-align: justify;
+  font-size: 100%;
+  margin-bottom: 15px;
+}
+
+.info-list {
+  text-align: justify;
+}
+
+.info-list ul {
+  list-style-type: initial;
+}
+
+.info-list li {
+  margin: 10px 20px;
+}
+
+.info-list a {
+  color: #be6c29;
+  font-size: 100%;
+}
+
+.socials {
+  display: inline;
+}
+
+.socials ul {
+  display: inline-block;
+}
+
+.socials li {
+  display: inline;
+  list-style-type: none;
+  padding-right: 5px;
+  font-size: 2em;
+}
+
+.socials li a {
+  color: #be6c29;
+}
+
+/*--------CONTACT---------*/
 
 .contact {
   background-color: #ececec;
-  padding: 20px;
+  padding: 3.5em;
+
   line-height: 145%;
+}
+
+.grid-form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: "name email";
+  margin-bottom: 20px;
+}
+
+.contact form label {
+  display: block;
+  color: black;
+  line-height: 170%;
+  text-align: justify;
+  font-size: 120%;
+  font-family: inherit;
+}
+
+.grid-form input,
+.contact form textarea {
+  border: 1px solid #be6c29;
+  border-radius: 3px;
+  line-height: 145%;
+  margin-top: 10px;
+  padding: 10px;
+  width:100%;
+}
+
+#nm {
+  grid-area: name;
+  margin: 0px 13px 13px 0px;
+  padding-right: 20px;
+}
+
+#em {
+  grid-area: email;
+  margin: 0px 0px 13px 0px;
+}
+
+#button {
+  grid-area: button;
+  margin: 13px;
+}
+
+.contact h2 {
+  padding-bottom: 20px;
+  font-size: 135%;
+  font-weight: 200;
+  text-align: center;
+}
+
+.submit-btn {
+  padding: 10px 20px;
+  background-color: #be6c29;
+  text-decoration: none;
+  color: white;
+  border:none;
+  border-radius: 3px;
+  font-size: 90%;
+  font-weight: bold;
+  margin-top: 30px;
 }
